[package]
name = "edgezero-adapter-spin"
description = "Fermyon Spin adapter for EdgeZero"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[features]
default = []
spin = ["dep:spin-sdk"]
cli = ["dep:edgezero-adapter", "edgezero-adapter/cli", "dep:ctor", "dep:rusqlite", "dep:toml", "dep:toml_edit", "dep:walkdir"]

[dependencies]
edgezero-core = { path = "../edgezero-core" }
edgezero-adapter = { path = "../edgezero-adapter", optional = true, features = ["cli"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spin-sdk = { workspace = true, optional = true }
subtle = { workspace = true }
thiserror = { workspace = true }
ctor = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

# rusqlite is CLI-only and host-only — `bundled` ships SQLite source
# (no host libsqlite3 install needed), and the `[target.…]` gate keeps
# it out of the wasm artifact entirely. The wasm32 builds never see
# rusqlite even when `features = ["spin", "cli"]` is on host.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
edgezero-core = { path = "../edgezero-core", features = ["test-utils"] }
http-body-util = { workspace = true }
tempfile = { workspace = true }
