[package]
name = "edgezero-adapter"
description = "Adapter registry and traits for EdgeZero adapters"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[features]
default = []
cli = ["dep:toml"]

[dependencies]
toml = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
