[package]
name = "edgezero-cli"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
description = "EdgeZero CLI: build and deploy to multiple edge adapters"

[dependencies]
edgezero-core = { workspace = true }
edgezero-adapter = { path = "../edgezero-adapter" }
edgezero-adapter-axum = { workspace = true, features = ["cli", "axum"], optional = true }
edgezero-adapter-cloudflare = { workspace = true, features = ["cli"], optional = true }
edgezero-adapter-fastly = { workspace = true, features = ["cli"], optional = true }
edgezero-adapter-spin = { workspace = true, features = ["cli"], optional = true }
app-demo-core = { path = "../../examples/app-demo/crates/app-demo-core", package = "app-demo-core", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
futures = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true}
toml = { workspace = true }

[build-dependencies]
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = [
    "cli",
    "edgezero-adapter-axum",
    "edgezero-adapter-fastly",
    "edgezero-adapter-cloudflare",
    "edgezero-adapter-spin",
]
cli = ["dep:clap"]
dev-example = ["dep:app-demo-core"]
