[package]
name = "edgezero-cli"
description = "EdgeZero CLI: build and deploy to multiple edge adapters"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "edgezero"
path = "src/main.rs"

[[bin]]
name = "check_no_nested_app_config"
path = "src/bin/check_no_nested_app_config.rs"
required-features = ["nested-app-config-check"]

[dependencies]
edgezero-core = { workspace = true }
edgezero-adapter = { path = "../edgezero-adapter" }
edgezero-adapter-axum = { workspace = true, features = ["cli", "axum"], optional = true }
edgezero-adapter-cloudflare = { workspace = true, features = ["cli"], optional = true }
edgezero-adapter-fastly = { workspace = true, features = ["cli"], optional = true }
edgezero-adapter-spin = { workspace = true, features = ["cli"], optional = true }
app-demo-core = { path = "../../examples/app-demo/crates/app-demo-core", package = "app-demo-core", optional = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"], optional = true }
fs4 = { workspace = true }
futures = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
similar = { workspace = true }
simple_logger = { workspace = true }
serde_json = { workspace = true}
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
validator = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"], optional = true }
syn = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[build-dependencies]
toml = { workspace = true }

[dev-dependencies]
edgezero-core = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }

[features]
default = [
    "cli",
    "edgezero-adapter-axum",
    "edgezero-adapter-fastly",
    "edgezero-adapter-cloudflare",
    "edgezero-adapter-spin",
]
cli = ["dep:clap"]
demo-example = ["dep:app-demo-core", "edgezero-adapter-axum"]
nested-app-config-check = ["dep:proc-macro2", "dep:syn", "dep:walkdir"]
