[package]
name = "edgezero-macros"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
log = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }
toml = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
# `edgezero-core` re-exports `AppConfig`; the derive tests assert
# against the trait/types over the re-export path the way downstream
# users will. Cargo allows dev-dep cycles (only the main dep edge
# matters for build ordering).
edgezero-core = { workspace = true }
tempfile = { workspace = true }
trybuild = { workspace = true }
