[package]
name = "anyedge-cloudflare-demo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "anyedge-cloudflare-demo"
path = "src/main.rs"

[dependencies]
anyedge-app-lib = { path = "../app-lib" }
anyedge-cloudflare = { path = "../../crates/anyedge-cloudflare", features = ["workers"] }
worker = "0.6"
