[workspace]
members = [
  "crates/app-demo-core",
  "crates/app-demo-adapter-axum",
  "crates/app-demo-adapter-cloudflare",
  "crates/app-demo-adapter-fastly",
  "crates/app-demo-adapter-spin",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
edgezero-adapter-axum = { path = "../../crates/edgezero-adapter-axum" }
edgezero-adapter-cloudflare = { path = "../../crates/edgezero-adapter-cloudflare" }
edgezero-adapter-fastly = { path = "../../crates/edgezero-adapter-fastly" }
edgezero-adapter-spin = { path = "../../crates/edgezero-adapter-spin" }
edgezero-core = { path = "../../crates/edgezero-core" }
spin-sdk = { version = "5.2", default-features = false }
fastly = "0.12"
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
simple_logger = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
worker = { version = "0.8", default-features = false, features = ["http"] }

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[workspace.lints.clippy]
# Same strict gate as the main workspace. Allow-list is intentionally narrower
# than `Cargo.toml` upstream — only entries the demo actually trips. Add new
# allows lazily when a real failure surfaces.
pedantic = { level = "warn", priority = -1 }
restriction = { level = "deny", priority = -1 }

# Meta
blanket_clippy_restriction_lints = "allow"
allow_attributes_without_reason = "allow"

# Adapter shims print to stderr when the binary is run on the wrong target.
print_stderr = "allow"

# Documentation
missing_docs_in_private_items = "allow"

# Style / formatting
implicit_return = "allow"
question_mark_used = "allow"
min_ident_chars = "allow"
single_call_fn = "allow"
str_to_string = "allow"
separated_literal_suffix = "allow"
pub_with_shorthand = "allow"
shadow_reuse = "allow"
arbitrary_source_item_ordering = "allow"

# Defensive coding
pattern_type_mismatch = "allow"
default_numeric_fallback = "allow"
arithmetic_side_effects = "allow"
expect_used = "allow"

# API design
exhaustive_structs = "allow"
missing_trait_methods = "allow"
field_scoped_visibility_modifiers = "allow"

# Imports / paths
absolute_paths = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
