[workspace]
members = [
  "crates/app-demo-core",
  "crates/app-demo-adapter-axum",
  "crates/app-demo-adapter-cloudflare",
  "crates/app-demo-adapter-fastly",
  "crates/app-demo-adapter-spin",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
edgezero-adapter-axum = { path = "../../crates/edgezero-adapter-axum" }
edgezero-adapter-cloudflare = { path = "../../crates/edgezero-adapter-cloudflare" }
edgezero-adapter-fastly = { path = "../../crates/edgezero-adapter-fastly" }
edgezero-adapter-spin = { path = "../../crates/edgezero-adapter-spin" }
edgezero-core = { path = "../../crates/edgezero-core" }
spin-sdk = { version = "5.2", default-features = false }
fastly = "0.12"
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
simple_logger = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
worker = { version = "0.8", default-features = false, features = ["http"] }

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[workspace.lints.clippy]
# Same strict gate as the main workspace. Allow-list mirrors the parent
# `Cargo.toml` only where the demo legitimately needs the same exemption —
# new entries should be added lazily when a real failure surfaces.
pedantic = { level = "warn", priority = -1 }
restriction = { level = "deny", priority = -1 }

# Meta — required when enabling `restriction` as a group.
blanket_clippy_restriction_lints = "allow"

# Documentation — demo is illustrative; private items don't need full docs.
missing_docs_in_private_items = "allow"

# Style / formatting — match the main workspace's idiomatic-Rust stance.
implicit_return = "allow"
question_mark_used = "allow"
min_ident_chars = "allow"
single_call_fn = "allow"
str_to_string = "allow"
separated_literal_suffix = "allow"
pub_with_shorthand = "allow"
arbitrary_source_item_ordering = "allow"

# Defensive coding — same trade-offs as the main workspace.
pattern_type_mismatch = "allow"
arithmetic_side_effects = "allow"

# API design — DTOs in the demo use `pub(crate)` field exposure on purpose;
# `exhaustive_structs` fires once on the unit struct generated by `app!`.
exhaustive_structs = "allow"
field_scoped_visibility_modifiers = "allow"

# Imports / paths — demo binaries are std applications, not no_std libraries.
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"

# Adapter shims print to stderr when the binary is run on the wrong target.
print_stderr = "allow"
allow_attributes_without_reason = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
