[package]
name = "app-demo-adapter-axum"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[[bin]]
name = "app-demo-adapter-axum"
path = "src/main.rs"

[dependencies]
app-demo-core = { path = "../app-demo-core" }
anyhow = { workspace = true }
axum = { workspace = true }
edgezero-adapter-axum = { workspace = true, features = ["axum"] }
edgezero-core = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
