[package]
name = "app-demo-adapter-cloudflare"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[[bin]]
name = "app-demo-adapter-cloudflare"
path = "src/main.rs"

[features]
default = ["cloudflare"]
cloudflare = ["edgezero-adapter-cloudflare/cloudflare"]

[dependencies]
app-demo-core = { workspace = true }
edgezero-adapter-cloudflare = { workspace = true }
edgezero-core = { workspace = true }
worker = { workspace = true }
