[package]
name = "app-demo-adapter-cloudflare"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[[bin]]
name = "app-demo-adapter-cloudflare"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["cloudflare"]
cloudflare = ["edgezero-adapter-cloudflare/cloudflare"]

[dependencies]
app-demo-core = { path = "../app-demo-core" }
edgezero-adapter-cloudflare = { workspace = true }
edgezero-core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
edgezero-adapter-cloudflare = { workspace = true, features = ["cloudflare"] }
edgezero-core = { workspace = true }
worker = { workspace = true }
