[package]
name = "app-demo-adapter-cloudflare"
description = "Cloudflare Workers adapter binary for the EdgeZero app-demo example"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "app-demo-adapter-cloudflare"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["cloudflare"]
cloudflare = ["edgezero-adapter-cloudflare/cloudflare"]

[dependencies]
app-demo-core = { path = "../app-demo-core" }
edgezero-adapter-cloudflare = { workspace = true }
edgezero-core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
edgezero-adapter-cloudflare = { workspace = true, features = ["cloudflare"] }
edgezero-core = { workspace = true }
worker = { workspace = true }
