[package]
name = "app-demo-adapter-fastly"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[[bin]]
name = "app-demo-adapter-fastly"
path = "src/main.rs"

[features]
default = []
fastly = ["edgezero-adapter-fastly/fastly"]

[dependencies]
app-demo-core = { path = "../app-demo-core" }
edgezero-adapter-fastly = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
edgezero-adapter-fastly = { workspace = true, features = ["fastly"] }
edgezero-core = { workspace = true }
fastly = { workspace = true }
once_cell = { workspace = true }
