[package]
name = "app-demo-adapter-fastly"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "app-demo-adapter-fastly"
path = "src/main.rs"

[features]
default = []
fastly = ["edgezero-adapter-fastly/fastly"]

[dependencies]
app-demo-core = { path = "../app-demo-core" }
edgezero-adapter-fastly = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
edgezero-adapter-fastly = { workspace = true, features = ["fastly"] }
edgezero-core = { workspace = true }
fastly = { workspace = true }
once_cell = { workspace = true }
