[package]
name = "app-demo-adapter-spin"
description = "Fermyon Spin adapter binary for the EdgeZero app-demo example"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["spin"]
spin = ["edgezero-adapter-spin/spin"]

[dependencies]
app-demo-core = { path = "../app-demo-core" }
edgezero-adapter-spin = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
edgezero-adapter-spin = { workspace = true, features = ["spin"] }
edgezero-core = { workspace = true }
spin-sdk = { workspace = true }
