[package]
name = "app-demo-cloudflare"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "app-demo-cloudflare"
path = "src/main.rs"

[dependencies]
app-demo-core = { path = "../app-demo-core" }
anyedge-cloudflare = { path = "../../../../crates/anyedge-cloudflare", features = ["cloudflare"] }
anyedge-controller = { path = "../../../../crates/anyedge-controller" }
worker = "0.6"
