[package]
name = "app-demo-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
edgezero-core = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
edgezero-core = { path = "../../../../crates/edgezero-core", features = ["test-utils"] }
