[package]
name = "app-demo-core"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
edgezero-core = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
edgezero-core = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }
